--- a/create_web_application_cv/pubspec.yaml
+++ b/create_web_application_cv/pubspec.yaml
@@ -1,5 +1,5 @@
-name: web_idevexpert
-description: "proyect web application flutter idevexpert"
+name: create_web_application_cv
+description: "for create mvvm architecture"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
