--- a/Proyect_mobil_course_logic_programming/pubspec.yaml
+++ b/Proyect_mobil_course_logic_programming/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   mysql_client: ^0.0.27
+  get: ^4.6.6
+  http: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
